# class-9

./: CMakeLists.txt
c/: CMakeLists.txt  linear_algebra.h  matrix.c  matrix_vector_mul.c  test_matrix_vector_mul.c  test_vector_add.c  test_vector_dot.c  vector.c  vector_add.c  vector_dot.c
cxx/: CMakeLists.txt  linear_algebra.h  matrix.cxx  matrix_vector_mul.cxx  test_matrix_vector_mul.cxx  test_vector_add.cxx  test_vector_dot.cxx  vector.cxx  vector_add.cxx  vector_dot.cxx
